feat: FE Test1 구성

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@tanstack/react-query": "^5.62.10",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.1.1",
     "tailwindcss": "^3.4.17",
     "zustand": "^5.0.2"
