--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.62.10",
+    "@tanstack/react-query-devtools": "^5.62.11",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "postcss": "^8.4.49",
